solc_mutator_ossfuzz_seed_corpus/test_sol/test_9f64018a4b25d9e7913a29c4401283d37b8326a6eae98b12007740410ff2b63a_0444433544c1e96307de2e6f7596aea0693dee3c_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bool i0,bytes23 i1,address i2,int104 i3)  returns(int192 o0)
{

  {


o0 /= (-2486242150560745438666280076297894177700085331562364419536 * (2318478729969281336959796507414004229324061853921679068879 % (((-1420087211569626066447693855742238892084114192689932835852 | -3049332187019945340298819360761513328402441235188669875013) * 2475380694752207072232720433921592597099662646300151372357) | -1753442484689996159135472092644451069168987397681204529864)));
  }

}
function f1(bool i0,address i1,address i2)  returns(bytes memory o0)
{ }
// ----
// TypeError 7366: (su0.sol:86-469): Operator /= not compatible with types int192 and int_const -101...(107 digits omitted)...9680
